--- a/ExpenseTracker_Backend/src/main/resources/application.properties
+++ b/ExpenseTracker_Backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=ExpenseTracker_Backend
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/expensetracker
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
