--- a/ExpenseTracker_Backend/pom.xml
+++ b/ExpenseTracker_Backend/pom.xml
@@ -42,6 +42,20 @@
 			<artifactId>jtransc-rt</artifactId>
 			<version>0.6.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
